...
                }
                Spacer(modifier = Modifier.width(Dp(4F)))
                Button(
                    shape = RoundedCornerShape(topStart = 4.dp, bottomStart = 4.dp),
                    onClick = saveActionClosure
                ) {
                    Icon(Icons.Filled.Done, contentDescription = "Hinzufügen")
                }
            }
            Spacer(Modifier.height(30.dp))
        }
    }
}
...
@Composable
private fun InfoText(
    cartItem: CartItem,
) {
    Row {
        if (cartItem.cartItemProperties.checked) {
            Icon(Icons.Outlined.CheckCircle, contentDescription = "Gekauft")
        }
        if (0 >= cartItem.cartItemProperties.amount) {
            Text(cartItem.item.name)
        } else {
            Text(cartItem.cartItemProperties.amount.toString() + " x " + cartItem.item.name)
        }
...
