...
                horizontalArrangement = Arrangement.End,
            ) {
                FloatingActionButton(onClick = {
                    chooseAction(currentSearchText)
                    clearSearch()
                }) {
                    Icon(Icons.Filled.Add, contentDescription = "Neu")
                }
            }
        }
        Row(
            horizontalArrangement = Arrangement.SpaceBetween,
            verticalAlignment = Alignment.Bottom,
...
                    .absolutePadding(top = 7.dp, left = 4.dp)
                    .fillMaxWidth()
                    .height(57.dp),
                shape = RoundedCornerShape(topStart = 4.dp),
                onClick = clearSearch
            ) {
                Icon(Icons.Filled.Clear, contentDescription = "Leeren")
            }
        }
    }
}

